--- a/src/pages/categories.css
+++ b/src/pages/categories.css
@@ -1,3 +1,15 @@
+/* Animation for category switch */
+.category-anim {
+    opacity: 1;
+    transform: translateY(0);
+    transition: opacity 0.4s, transform 0.4s;
+}
+
+.category-anim.animating {
+    opacity: 0;
+    transform: translateY(40px);
+}
+
 .filters {
     display: flex;
     flex-wrap: wrap;
@@ -19,7 +31,7 @@
 .filters li:hover,
 .filters li.active {
     box-shadow: -5px 5px 10px rgba(255, 255, 255, 0.1),
-                5px 5px 10px rgba(0, 0, 0, 0.35);
+        5px 5px 10px rgba(0, 0, 0, 0.35);
 }
 
 .search {
@@ -33,7 +45,7 @@
     margin-bottom: 20px;
     border-radius: 10px;
     box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.1),
-                5px 5px 15px rgba(0, 0, 0, 0.35);
+        5px 5px 15px rgba(0, 0, 0, 0.35);
 }
 
 .search input {
